dev/tests/cases/neg/33_aett_bad_variant.tv
aett Status { Pending, Active }
df main() -> void { echo!(Status::Missing); }
